--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-    "name": "openweathermap-api-fp-app",
-    "version": "1.0.0",
-    "description": "OpenWeatherMap API FP App",
-    "scripts": {
-      "start": "webpack-dev-server"
-    },
-    "author": "Mike Hacker",
-    "license": "MIT",
-    "devDependencies": {
-      "babel-core": "^6.26.0",
-      "babel-loader": "^7.1.2",
-      "babel-plugin-transform-object-rest-spread": "^6.26.0",
-      "babel-preset-env": "^1.6.1",
-      "hyperscript": "^2.0.2",
-      "hyperscript-helpers": "^3.0.3",
-      "virtual-dom": "^2.1.1",
-      "webpack": "^4.0.0",
-      "webpack-cli": "^3.3.2",
-      "webpack-dev-server": "^3.1.11"
-    }
+  "name": "openweathermap-api-fp-app",
+  "version": "1.0.0",
+  "description": "OpenWeatherMap API FP App",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "design": "serve ./design"
+  },
+  "author": "Mike Hacker",
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "hyperscript": "^2.0.2",
+    "hyperscript-helpers": "^3.0.3",
+    "virtual-dom": "^2.1.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.1.11"
+  },
+  "dependencies": {
+    "serve": "^11.0.0"
   }
-  
+}
