--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "regenerator-transform": "^0.14.0",
     "serve": "^11.0.0"
   }
 }
