--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "ramda": "^0.26.1",
     "regenerator-transform": "^0.14.0",
     "serve": "^11.0.0"
   }
